# tcmapper

./: .gitattributes  .gitignore  Makefile  README.md  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.staging.yml  package-lock.json  package.json  pytest.ini  requirements.txt  vetur.config.js
Application/backend/: build.py  pyproject.toml
Application/cShapeTools/: CMakeLists.txt  LICENSE
devel/: AADT_DB.ipynb  County_Boundaries.py  DataExplore.ipynb  DateExplore.ipynb  ElectionExplore.ipynb  HouseDensityAnalysis.ipynb  JuliaWeightFunc.ipynb  MetroCounties.json  acs_ftp_download.py  create_metro_grid.py  createarray.py  dataexplore.py  longitude_latitude_correct.py  metro_grid.csv  services.txt  weight_grid.py
devel/blog/: ElectionExplore.ipynb  Initial.ipynb
devel/vote/: Precincts.ipynb  Untitled.ipynb
dockerservice/: docker-compose.service
postgis/: docker-compose.postgis.yml  populate_data.py
tools/cShapeTools/: .gitignore  CMakeLists.txt  README.md
tools/cShapeTools/src/PathFinder/: CMakeLists.txt  main.c
tools/postgresPopulation/: awsRDS.sh  backup copy.sh  backup.sh  docker-compose.cleanpostgis.yml  export_to_csv.sh  populate_data copy.py  populate_data.py
tools/scripts/: convert_projection.py  process_counties.py  process_parcels.sh
webapp/: Dockerfile
webapp/backend/: build.py  data_links.txt  entrypoint.sh  manage.py  pyproject.toml  requirements.txt  setup.py
webapp/backend/backend/: production_settings.py  settings.py  urls.py
webapp/backend/backend/apps/geoapi/: urls.py
webapp/backend/backend/backend/: settings.py  urls.py
webapp/backend/backend/backend/templates/: base-vue.html
webapp/backend/backend/geocalc/: calc_distance.c  calc_distance.cpp
webapp/backend/backend/geotools/: distance_calc.c  distance_calc.html  distance_calc.pyx  path_calc.py
webapp/backend/backend/site_apps/geoapi/: apps.py  urls.py  views.py
webapp/backend/templates/: base-vue.html  base.html
webapp/backend/tests/: test_geoapi.py  test_geotools.py
(+110 files in other folders)
