[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Bryce Williams <bwilliams2@gmail.com>"]
#build = 'build.py'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^0.25.3"
flask = "^1.1.1"
flask-restful = "^0.3.7"
geopandas = "^0.6.2"
geopy = "^1.20.0"
pyproj = "^2.4.2"
astropy = "^4.0"
Cython = "^0.29.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.10.2"
jupyter = "^1.0.0"
black = {version = "^19.10b0", allow-prereleases = true}
pre-commit = "^1.20.0"
pylint = "^2.4.4"
tqdm = "^4.41.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
